<resources>
    <string name="app_name">DungeonMainMenu</string>
    <string name="app_icon_name">Dungeon Raider</string>
    <string name="action_settings">Settings</string>
    <string name="action_scorecard">ScoreCard</string>

    <string name="spinner_title">THEME</string>

    <!-- Main Menu start-->
    <string name="mm_new_game">NEW GAME</string>
    <string name="mm_resume_game">RESUME GAME</string>
    <string name="mm_score_board">SCOREBOARD</string>
    <string name="mm_settings">SETTINGS</string>
    <string name="mm_quit">QUIT</string>

    <!-- Main Menu End-->

    <!-- Level start-->
    <string name="lvl_tutorial">TUTORIAL</string>
    <string name="lvl_medium">MEDIUM</string>
    <string name="lvl_easy">EASY</string>
    <string name="lvl_hard">HARD</string>
    <string name="lvl_store">STORE</string>
    <string name="lvl_go">GO</string>
    <!-- Level End-->

    <!-- New Game start-->
    <string name="ng_enter_name">ENTER PLAYER NAME</string>
    <string name="ng_choose_character">CHOOSE CHARACTER</string>
    <string name="ng_confirm">CONFIRM</string>
    <!-- New Game End-->

    <!-- Setting start-->
    <string name="st_settings">SETTINGS</string>
    <string name="st_volume">VOLUME</string>
    <string name="st_theme">THEME</string>
    <string name="st_character">CHARACTER</string>
    <!-- Setting End-->

    <!-- Scoreboard start-->
    <string name="sc_score_card">SCORE CARD</string>
    <!-- Scoreboard End-->

    <!-- Help start-->
    <string name="hp_help">HELP</string>
    <!-- Help End-->

    <!-- Purchase dungeon item start-->
    <string name="pd_purchase_dungeon_items">PURCHASE ITEMS</string>
    <string name="pd_your_gold">YOUR GOLD</string>
    <string name="hp_keys_owned">Number of keys owned</string>
    <string name="hp_bombs">Number of bombs</string>
    <string name="pd_number_of_keys_owned">Number of keys owned :</string>
    <string name="pd_number_of_potions_owned">Number of potions owned :</string>
    <string name="pd_number_of_bombs_owned">Number of bombs owned :</string>

    <!-- Purchase dungeon item End-->

    <!--Help start -->
    <string name="help_how_to_play">How to play</string>
    <string name="help_how_to_play_details">"The player needs to solve every dungeon room in order to solve the entire level.\n\nThe dungeon room has many blocks of different types.\n\nThere are some sliding blocks which the player has to move to make his way through the dungeon.\n\nThe player has to collect all keys in order to open the doors for the next puzzle rooms. Use the joystick on-screen to move your player in the desired direction.\n\nIn order to use the items, the player needs to click the on-screen buttons after reaching the desired destination. For instance, if the user needs to open the exit door, he first needs to reach the door, then press the key button on the screen to open the door. Similarly to break the breakable wall using the bomb, the player needs to be adjacent to the wall. Potions can be used anytime, anywhere in the game."</string>
    <string name="help_tips">Tips</string>
    <string name="help_tips_details">"Try to solve the dungeon room in least number of steps and also in least amount of time to get most number of gold coins.\n\nUse the bombs to break the breakable walls. There might be treasure chest or keys behind the breakable wall.\n\nUse your potions to slow down the timer to reduce the time required to solve the dungeon room. This can earn you more gold.\n\nUse sliding blocks to open doors and extinguishing fire by placing them on floor switches."</string>
    <string name="help_about_the_game">About the game</string>
    <string name="help_about_the_game_details">"VERSION: 1.0 \n\nDEVELOPED BY:\nAURA Gaming Inc.\n\nINFO &amp; SUPPORT:\nSE GROUP 2"</string>
    <!--Help end -->

    <!-- Purchase dungeon item End-->

    <string name="loadProfile">USERNAME ALREADY EXISTS. DO YOU WANT TO CONTINUE?</string>

</resources>
