<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/back_norm">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mm_quit"
        android:onClick="quit"
        android:height="@android:dimen/app_icon_size"
        android:id="@+id/btn_quit"
        android:textSize="25dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="#4C0000"
        android:textStyle="bold|italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mm_settings"
        android:onClick="setting"
        android:id="@+id/btn_setting"
        android:height="@android:dimen/app_icon_size"
        android:textSize="25dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="#4C0000"
        android:textStyle="bold|italic"
        android:layout_above="@+id/btn_scorecard" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mm_score_board"
        android:onClick="scorecard"
        android:id="@+id/btn_scorecard"
        android:textSize="25dp"
        android:height="@android:dimen/app_icon_size"
        android:backgroundTint="@android:color/transparent"
        android:textColor="#4C0000"
        android:textStyle="bold|italic"
        android:layout_above="@+id/btn_quit" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mm_new_game"
        android:id="@+id/btn_newgame"
        android:onClick="newgame"
        android:backgroundTint="@android:color/transparent"
        android:height="@android:dimen/app_icon_size"
        android:textSize="25dp"
        android:textColor="#4C0000"
        android:textStyle="bold|italic"
        android:focusableInTouchMode="false"
        android:layout_above="@+id/btn_resume"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mm_resume_game"
        android:id="@+id/btn_resume"
        android:onClick="resume"
        android:backgroundTint="@android:color/transparent"
        android:height="10dp"
        android:textSize="25dp"
        android:textColor="#4C0000"
        android:textStyle="bold|italic"
        android:visibility="visible"
        android:textAlignment="inherit"
        android:layout_above="@+id/btn_setting"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/button5"
        android:background="@drawable/questionmark"
        android:onClick="help"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="450dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton7"
        android:background="@drawable/logo_back"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
