<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_norm"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mm_settings"
        android:id="@+id/lbl_settings"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold|italic"
        android:textSize="30dp"
        android:textColor="#4C0000"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:gravity="center|fill_vertical"
        android:layout_weight="0.57"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/st_volume"
        android:id="@+id/lbl_volume"
        android:textStyle="bold|italic"
        android:textSize="25dp"
        android:gravity="center|fill_vertical"
        android:textColor="#4C0000"
        android:layout_above="@+id/spinner_theme"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2" />
       

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/st_theme"
        android:id="@+id/lbl_theme"
        android:textStyle="bold|italic"
        android:textSize="25dp"
        android:gravity="center|fill_vertical"
        android:textColor="#4C0000"
        android:layout_weight="0.10"
        android:layout_alignTop="@+id/spinner_theme"
        android:layout_alignLeft="@+id/lbl_volume"
        android:layout_alignStart="@+id/lbl_volume" />
       





    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_volume"
        android:checked="false"
        android:onClick="changeVolume"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:layout_alignBottom="@+id/lbl_volume"
        android:layout_toRightOf="@+id/imageButton2"
        android:layout_toEndOf="@+id/imageButton2" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_theme"
        android:prompt="@string/spinner_title"
        android:spinnerMode="dropdown"
        android:textStyle="bold|italic"
        android:textSize="25dp"
        android:popupBackground="@drawable/back_norm"
        android:layout_marginTop="57dp"
        android:layout_alignTop="@+id/radioGroupCharacterSettings"
        android:layout_toRightOf="@+id/lbl_volume"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_alignRight="@+id/switch_volume"
        android:layout_alignEnd="@+id/switch_volume" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_icon"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:onClick="backtomaingame"
            android:textSize="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:textColor="#4C0000"
            android:textStyle="bold|italic"
            android:id="@+id/textView2"
            android:foregroundTint="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupCharacterSettings"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            android:layout_alignParentBottom="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:drawableRight="@drawable/bbpwa"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dungeon"
                android:id="@+id/radioCharacterSettings1"
                android:checked="false"
                android:layout_alignBottom="@+id/radioCharacterSettings2"
                android:layout_toLeftOf="@+id/radioCharacterSettings2"
                />

            <RadioButton
                android:layout_width="128dp"
                android:drawableRight="@drawable/bbpwb"
                android:layout_height="208dp"
                android:buttonTint="@color/dungeon"
                android:id="@+id/radioCharacterSettings2"
                android:checked="false"
                android:layout_alignBottom="@+id/radioGroupCharacterSettings"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                 />

        </RadioGroup>

    <ImageButton
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton2"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo_back"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/lbl_settings"
        android:layout_toStartOf="@+id/lbl_settings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_character"
        android:id="@+id/lbl_character"
        android:textStyle="bold|italic"
        android:textSize="25dp"
        android:gravity="center|fill_vertical"
        android:textColor="#4C0000"
        android:layout_weight="0.14"
        android:layout_alignBottom="@+id/switch_volume"
        android:layout_toRightOf="@+id/lbl_settings"
        android:layout_toEndOf="@+id/lbl_settings" />

</RelativeLayout>
